--- a/templates/numbers.html
+++ b/templates/numbers.html
@@ -87,14 +87,15 @@
                 xhr.open('POST', 'http://127.0.0.1:5000/Numbers/')
                 xhr.setRequestHeader('Content-Type', 'application/json')
                 xhr.send(JSON.stringify({
-                    image: image.asDataURL('image/png')
+                    image: image.asDataURL('image/png'),
+                    symbol: symbol
                 }))
                 xhr.onload = function (e) {
                     done(true)
                     window.location.reload()
                     var obj = JSON.parse(this.responseText);
                     // alert("Prediction:  - "+obj.prediction+" - \n \nSuccess:  "+obj.success);
-                    alert("Prediction:  - "+obj.prediction);
+                     alert("Recognition:  - "+obj.prediction+"   Result: "+obj.result+"\nTrue: "+obj.trues+"   False: "+obj.falses);
                 }
             },
             defaultTool: "brush",
@@ -108,7 +109,8 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-      <script>        
+      <script>
+        var symbol = 'x'
         function random_upper(){
         var NumberCards=new Array()
         //specify random images below. You can have as many as you wish
@@ -127,6 +129,7 @@
         if (ry==0)
         ry=1
         document.write('<img src="../static/img/NumberCards/'+NumberCards[ry]+'" border=0, height=500 float: center;>')
+        symbol = NumberCards[ry].substring(6,7)
         }
         random_upper()
     </script>
