--- a/templates/Letters.html
+++ b/templates/Letters.html
@@ -3,19 +3,21 @@
   <head>
     <title>SheLLLearn Letters</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=3">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="../static/js/painterro-0.2.68.min.js"></script>
-    <!-- <script src="./painterro-0.2.68.min"></script> -->
     <style>
     body {
-        font: 20px Montserrat, sans-serif;
-        line-height: 2;
-        color: #000000;
-       
+      background-repeat: no-repeat; 
+      background-size: auto;
+      background-position: center;
+      background-color: #1aa9bc; /* Green */
+      font: 20px Montserrat, sans-serif;
+      line-height: 2;
+      color: #000000;
     }
     p {font-size: 16px;}
     .margin {margin-bottom: 45px;}
@@ -29,24 +31,26 @@
         border: 0;
         border-radius: 0;
         margin-bottom: 0;
-        font-size: 12px;
+        font-size: 16px;
         letter-spacing: 5px;
     }
     .navbar-nav  li a:hover {
         color: #1abc9c !important;
     }
     .ptro-holder-wrapper {
-      height: 500px !important; 
-      width: 500px !important;
-      margin-top: 100px !important;
-    }
+        height: 1px !important; 
+        width: 1px !important;
+        margin-top: 1px !important;
+        color: lightgrey;
+    }    
     .ptro-holder {
-      height: 500px;
-      width: 500px;
+      height: 560px;
+      width: 560px;
       margin-top: 100px;
     }
     img {
       float: right;
+      padding: 25px
     }
     </style>
   </head>
@@ -65,8 +69,8 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/ShellLearn_book">Home</a></li>
           <li><a href="/login">Login</a></li>
+          <li><a href="/ShellLearn_book">Home</a></li>
           <li><a href="/letters">Letters</a></li>
           <li><a href="/numbers">Numbers</a></li>
           <li><a href="/about">About</a></li>
@@ -80,7 +84,7 @@
       </div>
     <div class="row">
       <div class="col-sm-6">
-
+    
         <!-- Start Painterro -->
     <script>
         var ptro = Painterro({
@@ -98,13 +102,14 @@
                     window.location.reload()
                     var obj = JSON.parse(this.responseText);
                     // alert("Prediction:  - "+obj.prediction+" - \n \nSuccess:  "+obj.success);
-                    alert("Recognition:  - "+obj.prediction+"   Result: "+obj.result+"\nTrue: "+obj.trues+"   False: "+obj.falses);
+                    alert("You wrote the letter:  - "+obj.prediction+"   Result: "+obj.result+"\nYour Score: \nTrue: "+obj.trues+"   False: "+obj.falses);
                 }
 
             },
             defaultTool: "brush",
-            // fontStrokeSize: 90
-            defaultLineWidth: 20
+            defaultSize:'560x560',
+            defaultLineWidth: 25,
+            hiddenTools: ['crop', 'line', 'rect', 'ellipse','text', 'rotate', 'resize', 'open', 'close']
         })
         ptro.show()
       </script>
@@ -114,36 +119,35 @@
       <div class="row">
         <div class="col-sm-6">
       <script>
-      var symbol = 'x'
         function random_upper(){
         var UpperLetterCards=new Array()
         //specify random images below. You can have as many as you wish
-        UpperLetterCards[0] = 'CapitalA.png'
+        UpperLetterCards[0] = 'CapitalA.png' 
         UpperLetterCards[1] = 'CapitalB.png'
-        UpperLetterCards[2] = 'CapitalC.png'
-        UpperLetterCards[3] = 'CapitalD.png'
-        UpperLetterCards[4] = 'CapitalE.png'
-        UpperLetterCards[5] = 'CapitalF.png'
-        UpperLetterCards[6] = 'CapitalG.png'
-        UpperLetterCards[7] = 'CapitalH.png'
-        UpperLetterCards[8] = 'CapitalI.png'
-        UpperLetterCards[9] = 'CapitalJ.png'
-        UpperLetterCards[10] = 'CapitalK.png'
-        UpperLetterCards[11] = 'CapitalL.png'
-        UpperLetterCards[12] = 'CapitalM.png'
-        UpperLetterCards[13] = 'CapitalN.png'
-        UpperLetterCards[14] = 'CapitalO.png'
+        UpperLetterCards[2] = 'CapitalC.png' 
+        UpperLetterCards[3] = 'CapitalD.png' 
+        UpperLetterCards[4] = 'CapitalE.png' 
+        UpperLetterCards[5] = 'CapitalF.png' 
+        UpperLetterCards[6] = 'CapitalG.png' 
+        UpperLetterCards[7] = 'CapitalH.png' 
+        UpperLetterCards[8] = 'CapitalI.png' 
+        UpperLetterCards[9] = 'CapitalJ.png' 
+        UpperLetterCards[10] = 'CapitalK.png' 
+        UpperLetterCards[11] = 'CapitalL.png' 
+        UpperLetterCards[12] = 'CapitalM.png' 
+        UpperLetterCards[13] = 'CapitalN.png' 
+        UpperLetterCards[14] = 'CapitalO.png' 
         UpperLetterCards[15] = 'CapitalP.png'
-        UpperLetterCards[16] = 'CapitalQ.png'
-        UpperLetterCards[17] = 'CapitalR.png'
-        UpperLetterCards[18] = 'CapitalS.png'
+        UpperLetterCards[16] = 'CapitalQ.png' 
+        UpperLetterCards[17] = 'CapitalR.png' 
+        UpperLetterCards[18] = 'CapitalS.png' 
         UpperLetterCards[19] = 'CapitalT.png'
         UpperLetterCards[20] = 'CapitalU.png'
-        UpperLetterCards[21] = 'CapitalV.png'
-        UpperLetterCards[22] = 'CapitalW.png'
-        UpperLetterCards[23] = 'CapitalX.png'
-        UpperLetterCards[24] = 'CapitalY.png'
-        UpperLetterCards[25] = 'CapitalZ.png'
+        UpperLetterCards[21] = 'CapitalV.png' 
+        UpperLetterCards[22] = 'CapitalW.png' 
+        UpperLetterCards[23] = 'CapitalX.png' 
+        UpperLetterCards[24] = 'CapitalY.png' 
+        UpperLetterCards[25] = 'CapitalZ.png' 
 
         var ry=Math.floor(Math.random()*UpperLetterCards.length)
         if (ry==0)
