--- a/templates/ShellLearn_book.html
+++ b/templates/ShellLearn_book.html
@@ -22,6 +22,23 @@
     background-repeat: no-repeat; 
     background-size: 100% 100%;
     }
+    .navbar {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      border: 0;
+      border-radius: 0;
+      margin-bottom: 0;
+      font-size: 16px;
+      letter-spacing: 5px;
+  }
+  .navbar-nav  li a:hover {
+      font: Helvetica,Arial,sans-serif;
+      color: #1abc9c !important;
+  }
+
+  .navbar-brand {
+    color: rgb(250, 247, 84);
+  }
     </style>
 </head>
 <body>
@@ -34,15 +51,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="/ShellLearn_book">SheLLLearn Home</a>
+            <a class="navbar-brand" href="/ShellLearn_book">SheLLLearn - Home</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/ShellLearn_book">Home</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/letters">Letters</a></li>
-                <li><a href="/numbers">Numbers</a></li>
-                <li><a href="/about">About</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/ShellLearn_book">Home</a></li>
+                    <li><a href="/letters">Letters</a></li>
+                    <li><a href="/numbers">Numbers</a></li>
+                    <li><a href="/about">About</a></li>
             </ul>
           </div>
         </div>
@@ -86,13 +103,13 @@
             </div>
         </div>
     </div>
-    <div>
+    <!-- <div>
         {% for f in files %}
         <div class="img-browse">
             <a href="/image/{{f}}"><img src="/image/{{f}}"/></a>
         </div>
         {% endfor %}
-    </div>
+    </div> -->
     <style>
         .img-browse {
             width: 600px;
@@ -103,8 +120,25 @@
         .img-browse img {
             width: 100%;
         }
-    </style>
-    <script>
+        .navbar {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            border: 0;
+            border-radius: 0;
+            margin-bottom: 0;
+            font-size: 16px;
+            letter-spacing: 5px;
+        }
+        .navbar-nav  li a:hover {
+            font: Helvetica,Arial,sans-serif;
+            color: #1abc9c !important;
+        }
+
+        .navbar-brand {
+            color: rgb(250, 247, 84);
+        }
+  </style>
+    <!-- <script>
         var ptro = Painterro({
             saveHandler: function (image, done) {
                 var xhr = new XMLHttpRequest()
@@ -119,6 +153,6 @@
                 }
             }
         })
-    </script>   
+    </script>    -->
 </body>
 </html>
