--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,6 @@
     <title>SheLLLearn Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="../static/css/finStyle.css">
-    <link rel="stylesheet" href="../static/css/ema_style.css"> -->
     <style>
         body {
             background-repeat: no-repeat; 
@@ -15,21 +13,21 @@
             background-color: #1aa9bc; /* Green */
         }
         .navbar {
-        padding-top: 15px;
-        padding-bottom: 15px;
-        border: 0;
-        border-radius: 0;
-        margin-bottom: 0;
-        font-size: 12px;
-        letter-spacing: 5px;
-    }
-    .navbar-nav  li a:hover {
-        color: #1abc9c !important;
-    }
-    </style>
+            padding-top: 15px;
+            padding-bottom: 15px;
+            border: 0;
+            border-radius: 0;
+            margin-bottom: 0;
+            font-size: 16px;
+            letter-spacing: 5px;
+        }
+        .navbar-nav  li a:hover {
+            font: Helvetica,Arial,sans-serif;
+            color: #1abc9c !important;
+        }
+  </style>
 </head>
-
-</body>>
+</body>
   <!-- Navbar -->
   <nav class="navbar navbar-default">
     <div class="container">
@@ -39,16 +37,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="#">SheLLLearn - Log In</a>
+        <a class="navbar-brand-left" href="#">SheLLLearn - Log in</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="/ShellLearn_book">Home</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/letters">Letters</a></li>
-            <li><a href="/numbers">Numbers</a></li>
-            <li><a href="/about">About</a></li>
-                 
+                <li><a href="/login">Log in</a></li>
+                <li><a href="/ShellLearn_book">Home</a></li>
+                <li><a href="/letters">Letters</a></li>
+                <li><a href="/numbers">Numbers</a></li>
+                <li><a href="/about">About</a></li>
         </ul>
       </div>
     </div>
@@ -58,8 +55,7 @@
 <section id="cover">
     <div class="container  h-100" style='height: 100vh'>
         <div class="row h-100 justify-content-center align-items-center">
-            <h3 style="color:rgb(250, 247, 84)" >SheLLLearn Login</h3>
-            <br>
+          <br>
             <form action="/login" method="POST" class="col-12">
                 <div class="form-group">
                     <input type="text" placeholder="Username" name="username">
@@ -68,7 +64,7 @@
                     <input type="password" placeholder="Password" name="password">
                 </div>
                 <div class="form-group">
-                    <input class="btn btn-default" type="submit" value="Login">
+                    <input class="btn btn-default" type="submit" value="Log in">
                 </div>
             </form>
         </div>
