--- a/templates/ShellLearn_About.html
+++ b/templates/ShellLearn_About.html
@@ -83,11 +83,12 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">What is ShellLearn?</h3>
+  <h3 class="margin">What is SheLLLearn?</h3>
   <img src="../static/img/Seashells.jpg" class="img-responsive img-square margin" style="display:inline" alt="Shell" width="350" height="350">
-  <p>ShellLearn is an interactive learning tool that evaluates the writing skills of young children using a trained computer model.</p>
-  <p>Users can use the Panterro App to write letters and numbers, our model will evaluate their try and record meaningful data on their improvement. </p>
-  <p>There is positive reinforcement as well as encouragement to keep trying!</p>
+  <p>SheLLLearn is an interactive learning tool designed to evaluate writing skills using a trained computer model. </P>
+  <p>Our model has many applications including the teaching of young children and those who are new to English</P>
+  <p> as well as those using physical therapy to regain mobility and hone their writing skills after injury or stroke for example. </P>
+    <p>Additionally, future builds will be able to evaluate lower case numbers, beginning letter sounds and more!</p>
   <form action="/ShellLearn_book" method="POST">
     <input class="btn btn-default btn-lg" type="submit" value="Try it Now!">
   </form>
@@ -97,9 +98,8 @@
   <h3 class="margin">Who Are We?</h3>
   <img src="../static/img/Shell_Learn.jpg" class="img-responsive img-square margin" style="display:inline" alt="Shell" width="350" height="350">
   <p>ShellLearn was created by four students at Rutgers School of Continuing Studies as the final project for our Data Science and Visualization Boot Camp through Rutgers University.</p>
-  <p>Backend development was done mostly by Pragati Mehta and Saswati Mahap.</p>
-  <p>Frontend development was done mostly by Alfia Fahrutdinova and Jill Stratton.</p>
-  <p>However, each team member contributed in many ways to each part of the final project!</p>
+  <p>Each member of our dynamic team contributed to the the many aspects of our project such as training a machine learning model, HTML, CSS, JavaScript, MongoDB, and Python.</p>
+  <p>It is our sincere hope you enjoy this app! Please checkout our contact information below!</p>
 </div>
 
 <!-- Third Container (Grid) -->
@@ -113,14 +113,6 @@
       <div class="card-body">
         <p><a href="hhttps://github.com/Alfiausa" class="card-link">GitHub Portfolio link</a></p>
         <p><a href="https://www.linkedin.com/in/alfia-fahrutdinova-ab6258118/" class="card-link">LinkedIn link</a></p>
-      </div>
-    </div>
-    <div class="col-sm-3"> 
-      <p>Saswati Mahapatra</p>
-      <img src="../static/img/members/smahapatra.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <div class="card-body">
-        <p><a href="https://github.com/SaswatiMahap" class="card-link">GitHub Portfolio link</a></p>
-        <p><a href="https://www.linkedin.com/in/saswati-mahapatra-84284912/" class="card-link">LinkedIn link</a></p>
       </div>
     </div>
     <div class="col-sm-3"> 
@@ -139,6 +131,14 @@
         <p><a href="https://www.linkedin.com/in/strattonjill/" class="card-link">LinkedIn link</a></p>
       </div>
     </div>
+    <div class="col-sm-3"> 
+        <p>Saswati Mahapatra</p>
+        <img src="../static/img/members/smahapatra.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+        <div class="card-body">
+          <p><a href="https://github.com/SaswatiMahap" class="card-link">GitHub Portfolio link</a></p>
+          <p><a href="https://www.linkedin.com/in/saswati-mahapatra-84284912/" class="card-link">LinkedIn link</a></p>
+        </div>
+      </div>
   </div>
 </div>
 
