--- a/templates/ShellLearn_About.html
+++ b/templates/ShellLearn_About.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Theme Made By www.w3schools.com - No Copyright -->
   <title>SheLLLearn About</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +12,7 @@
   <style>
   body {
       font: Helvetica,Arial,sans-serif;
-      line-height: 2;
+      line-height: 1.8;
       color: rgb(250, 247, 84);
   }
   p {font-size: 16px;}
@@ -42,7 +43,7 @@
       border: 0;
       border-radius: 0;
       margin-bottom: 0;
-      font-size: 16px;
+      font-size: 12px;
       letter-spacing: 5px;
   }
   .navbar-nav  li a:hover {
@@ -70,11 +71,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-          <li><a href="/login">Login</a></li>
-          <li><a href="/ShellLearn_book">Home</a></li>
-          <li><a href="/letters">Letters</a></li>
-          <li><a href="/numbers">Numbers</a></li>
-          <li><a href="/about">About</a></li>
+        <li><a href="/ShellLearn_book">Home</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/letters">Letters</a></li>
+        <li><a href="/numbers">Numbers</a></li>
+        <li><a href="/about">About</a></li>
       </ul>
     </div>
   </div>
@@ -92,7 +93,7 @@
     <input class="btn btn-default btn-lg" type="submit" value="Try it Now!">
   </form>
 </div>
-<!-- Second Container -->
+<!-- First Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Who Are We?</h3>
   <img src="../static/img/Shell_Learn.jpg" class="img-responsive img-square margin" style="display:inline" alt="Shell" width="350" height="350">
@@ -140,5 +141,11 @@
       </div>
   </div>
 </div>
+
+<!-- Footer -->
+<footer class="container-fluid bg-4 text-center">
+  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
+</footer>
+
 </body>
 </html>
